--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /pulllist/tickets/*/*.html
 /pulllist/tickets/*.json
 /pulllist/tickets/*/*.pdf
+/pulllist/tickets/*/*.tgz
 /patron/key_idm.php
 /patron/idcards/*.html
 /patron/idcards/*.pdf
