--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
 *.bak
 *.zip
 *.log
+*.zip
+*.tgz
 /out.txt
 /eternal_tickets.php
 /pulllist/key.php
 /pulllist/tickets/*/*.html
 /pulllist/tickets/*.json
 /pulllist/tickets/*/*.pdf
-/pulllist/tickets/*/*.tgz
 /patron/key_idm.php
 /patron/idcards/*.html
 /patron/idcards/*.pdf
